--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'groovy'
 apply plugin: 'war'
 apply plugin: 'tomcat'
 apply plugin: 'java'
@@ -26,7 +27,9 @@ dependencies {
   }
 }
 
-repositories { mavenCentral() }
+repositories { mavenCentral() 
+  maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+ }
 
 dependencies {
     def tomcatVersion = '7.0.42'
@@ -38,15 +41,19 @@ dependencies {
 
     compile 'org.springframework:spring-core:3.2.3.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
-
+    compile "org.codehaus.groovy:groovy-all:2.3.6"
+    compile 'org.thymeleaf:thymeleaf-spring3:2.0.18'
     compile 'org.slf4j:slf4j-api:1.7.5'
     runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 
     testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
-
+    testCompile "org.spockframework:spock-core:1.0-groovy-2.0-SNAPSHOT"
     testCompile 'junit:junit:4.11'
     testCompile "org.mockito:mockito-all:1.9.5"
     testCompile "org.hamcrest:hamcrest-library:1.3"
+    testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
+    testRuntime "cglib:cglib-nodep:3.1"          // allows mocking of classes (in addition to interfaces)
+    testRuntime "org.objenesis:objenesis:2.1"    // allows mocking of classes without default constructor (together with CGLIB)
 
     provided 'javax.servlet:javax.servlet-api:3.0.1'
 }
